[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dsm-engine"
version = "1.0.0"
description = "Dynamic Segmented Memory (DSM) engine for scalable LLM context routing."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Nare Labs"}]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
]

[project.urls]
Homepage = "https://narelabs.com"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
dsm = "dsm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dsm"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
